--- a/q8/q8/css/style.css
+++ b/q8/q8/css/style.css
@@ -1,2 +1,12 @@
 @charset "UTF-8";
 
+.img3 img{
+    text-align: center;
+    width: 100%;
+}
+
+.img4 img {
+    text-align: center;
+    width: 100%;
+    background-size: cover;
+}
