--- a/q6/q6/css/style.css
+++ b/q6/q6/css/style.css
@@ -1,1 +1,40 @@
 @charset "UTF-8";
+
+header {
+    background-color: #388bff;
+    width: 100%;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrapper {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+#title {
+    font-size: 24px;
+    color: #f2ff7b;
+    font-weight: bold;
+    align-items: center;
+    padding: 30px;
+}
+
+#navi ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+#navi li {
+    list-style: none;
+    padding: 30px;
+}
+
+#navi a {
+    text-decoration: none;
+    color: #fff;
+}
